--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel</title>
-</head>
-<body>
-    <h1>hello</h1>
-</body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="navbar container">
+        <div class="logo"><a href="#">travelaja</a></div>
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Discover</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">News</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="select-id">
+          <span>
+            <svg
+              width="18"
+              height="19"
+              viewBox="0 0 18 19"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M8.94373 17.9375C13.6125 17.9375 17.3812 14.1688 17.3812 9.5H0.506226C0.506226 14.1688 4.27498 17.9375 8.94373 17.9375Z"
+                fill="#F9F9F9"
+              />
+              <path
+                d="M8.94373 1.0625C4.27498 1.0625 0.506226 4.83125 0.506226 9.5H17.3812C17.3812 4.83125 13.6125 1.0625 8.94373 1.0625Z"
+                fill="#ED4C5C"
+              />
+            </svg>
+          </span>
+          ID
+          <span class="select-icon">
+            <svg
+              width="16"
+              height="17"
+              viewBox="0 0 16 17"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M4.00002 5.29999L8.00002 9.29999L12 5.29999L13.6 6.09999L8.00002 11.7L2.40002 6.09999L4.00002 5.29999Z"
+                fill="white"
+              />
+            </svg>
+          </span>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
