--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo"><a href="#">travelaja</a></div>
         <nav>
           <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="" class="active">Home</a></li>
             <li><a href="">Discover</a></li>
             <li><a href="">Services</a></li>
             <li><a href="">News</a></li>
@@ -55,6 +55,43 @@
               />
             </svg>
           </span>
+        </div>
+      </div>
+      <div class="banner">
+        <div class="wrapper">
+          <h2>Explore the world with a smile</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam,
+            purus sit amet luctus venenatis, lectus magna fringilla urna,
+            porttitor rhoncus dolor purus non enim praesent elementum facilisis
+            leo,
+          </p>
+          <form>
+            
+            <div class="input-form">
+              <img src="./image/icon1.png" alt="icon" />
+              <input type="text" placeholder="City or Destination" />
+              <input type="text" placeholder="Date of stay" />
+              <input type="text" placeholder="Person" />
+            </div>
+            <button type="submit">
+              Find Trip Now
+              <span
+                ><svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M10.2635 20.526C12.5407 20.5255 14.7523 19.7632 16.5461 18.3605L22.1859 24L24 22.186L18.3602 16.5465C19.7637 14.7526 20.5265 12.5407 20.5271 10.263C20.5271 4.60423 15.9226 0 10.2635 0C4.60448 0 0 4.60423 0 10.263C0 15.9217 4.60448 20.526 10.2635 20.526ZM10.2635 2.56575C14.5088 2.56575 17.9612 6.01796 17.9612 10.263C17.9612 14.508 14.5088 17.9602 10.2635 17.9602C6.01828 17.9602 2.56588 14.508 2.56588 10.263C2.56588 6.01796 6.01828 2.56575 10.2635 2.56575Z"
+                    fill="white"
+                  />
+                </svg>
+              </span>
+            </button>
+          </form>
         </div>
       </div>
     </header>
