add points blog

--- a/index.html
+++ b/index.html
@@ -95,5 +95,46 @@
         </div>
       </div>
     </header>
+
+    <main class="container">
+      <div class="points">
+        <div class="points-imgs">
+          <div class="points-img">
+            <img src="./image/subtract1.png" alt="subtract img">
+          </div>
+          <div class="points-img">
+            <img src="./image/subtract2.png" alt="subtract img">
+          </div>
+          <div class="points-img">
+            <img src="./image/subtract3.png" alt="subtract img">
+          </div>
+        </div>
+        <div class="points-content">
+          <div class="points-text">
+            <span>Travelers Point</span>
+            <h3>We help to find your dream place</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel fringilla est ullamcorper eget nulla facilisi</p>
+          </div>
+          <div class="points-info">
+            <div class="info-item">
+              <span>100+</span>
+              <p>Holiday Package</p>
+            </div>
+            <div class="info-item">
+              <span>172</span>
+              <p>Hotels</p>
+            </div>
+            <div class="info-item">
+              <span>68</span>
+              <p>Elite Transportation</p>
+            </div>
+            <div class="info-item">
+              <span>32M+</span>
+              <p>we help to find your dream place</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
