--- a/index.html
+++ b/index.html
@@ -229,6 +229,58 @@
           </div>
         </div>
       </div>
+      <div class="about">
+        <div class="about-title">
+          Testimonial
+        </div>
+        <div class="about-title-main">
+          What they say about us
+        </div>
+        <div class="user">
+          <article>
+            <div class="card-header">
+              <img src="./image/user-img.png" alt="user">
+              <h3>Angelina Simple</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis</p>
+          </article>
+          <article class="active">
+            <div class="card-header">
+              <img src="./image/user-img.png" alt="user">
+              <h3>Angelina Simple</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis</p>
+          </article>
+          <article>
+            <div class="card-header">
+              <img src="./image/user-img.png" alt="user">
+              <h3>Angelina Simple</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis</p>
+          </article>
+          <article>
+            <div class="card-header">
+              <img src="./image/user-img.png" alt="user">
+              <h3>Angelina Simple</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis</p>
+          </article>
+          <article>
+            <div class="card-header">
+              <img src="./image/user-img.png" alt="user">
+              <h3>Angelina Simple</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis</p>
+          </article>
+          <article>
+            <div class="card-header">
+              <img src="./image/user-img.png" alt="user">
+              <h3>Angelina Simple</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis</p>
+          </article>
+        </div>
+      </div>
     </main>
   </body>
 </html>
